fixed "reset" and "?" wrapping when closing/opening animation of side panel occurs

--- a/src/common/calc/style/calc.less
+++ b/src/common/calc/style/calc.less
@@ -144,7 +144,7 @@ a.field-help {
 }
 
 .reset-button {
-  margin-left: 10px;
+  margin-left: 140px;
 }
 
 .input-symbol {
